# beleggingsraadgever-demo

./: .gitignore  README.md  pyproject.toml
data/imports/: asml.json  besi.json
docs/: architecture.md  beleggers-belangen-pipeline.md  decisions.md  github-private-repo.md
scripts/: br  configure-demo-remote  demo  demo_analysis.py  privacy-check  push-all  start-demo  start-private  web
src/beleggingsraadgever/: __init__.py  __main__.py  advisor.py  backups.py  classification.py  cli.py  collector.py  document_text.py  formatting.py  history.py  identity.py  importer.py  indicators.py  knowledge.py  knowledge_scope.py  models.py  peer_discovery.py  peers.py  placeholders.py  portfolio.py  portfolio_importer.py  portfolio_refresh.py  provider_identity.py  real_data.py  sample_data.py  storage.py  symbol_resolution.py  web.py  web_components.py  web_formatting.py  web_knowledge.py  web_knowledge_import.py  web_layout.py  web_params.py  web_portfolio.py  web_report.py  web_snapshot.py  web_snapshot_render.py  web_status.py
tests/: test_advisor.py  test_classification.py  test_collector.py  test_document_text.py  test_formatting.py  test_importer.py  test_indicators.py  test_knowledge.py  test_placeholders.py  test_portfolio_importer.py  test_real_data.py  test_sources.py  test_symbol_resolution.py  test_web.py
