[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beleggingsraadgever"
version = "0.1.0"
description = "Local-first persoonlijke beleggingsraadgever met bewijsvoering"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Albert van Egmond" }]
dependencies = []

[project.scripts]
beleggingsraadgever = "beleggingsraadgever.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

